# blinkytune

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindPortaudio.cmake
doc/: Doxyfile  mainpage.md
doc/html/: annotated.html  class_audio_device.html  class_audio_device__coll__graph.map  class_audio_device__coll__graph.md5  class_audio_input_stream.html  class_audio_input_stream__inherit__graph.map  class_audio_input_stream__inherit__graph.md5  class_audio_interface.html  class_audio_interface__coll__graph.map  class_audio_interface__coll__graph.md5  class_audio_stream.html  class_audio_stream__coll__graph.map  class_audio_stream__coll__graph.md5  class_audio_stream__inherit__graph.map  class_audio_stream__inherit__graph.md5  class_collapse_widget.html  class_collapse_widget__coll__graph.map  class_collapse_widget__coll__graph.md5  class_color_beat.html  class_color_beat__coll__graph.map  class_color_beat__coll__graph.md5  class_color_beat__inherit__graph.map  class_color_beat__inherit__graph.md5  class_color_spectrum.html  class_color_spectrum__coll__graph.map  class_color_spectrum__coll__graph.md5  class_color_spectrum__inherit__graph.map  class_color_spectrum__inherit__graph.md5  class_device_card.html  class_device_card__coll__graph.map  class_device_card__inherit__graph.md5  class_effect.html  class_effect__coll__graph.md5  class_effect__inherit__graph.map  class_effect__inherit__graph.md5  class_effects_controller.html  class_effects_controller__coll__graph.map  class_effects_controller__coll__graph.md5  class_effects_factory.html  class_effects_factory__coll__graph.map  (+182 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_10.js  (+33 more)
src/: AudioDevice.cpp  AudioDevice.h  AudioInputStream.cpp  AudioInputStream.h  AudioInterface.cpp  AudioInterface.h  AudioStream.cpp  AudioStream.h  CMakeLists.txt  CollapseWidget.cpp  CollapseWidget.h  DSPParameters.h  DeviceCard.cpp  DeviceCard.h  Effect.cpp  Effect.h  EffectsController.cpp  EffectsController.h  EffectsFactory.cpp  EffectsFactory.h  EffectsRenderer.cpp  EffectsRenderer.h  FIFOQueue.h  Filter.cpp  Filter.h  IndicatorWidget.cpp  IndicatorWidget.h  LEDStrip.cpp  LEDStrip.h  LedStripWidget.cpp  LedStripWidget.h  MainWindow.cpp  MainWindow.h  MelFilterBank.cpp  MelFilterBank.h  NoSoundEffect.cpp  NoSoundEffect.h  SamplesCollector.cpp  SamplesCollector.h  Settings.h  (+15 more)
src/GUI/: MainWindow.cpp  MainWindow.h
src/effects/: ColorBeat.cpp  ColorBeat.h  ColorSpectrum.cpp  ColorSpectrum.h  Rainbow.cpp  Rainbow.h  StillColor.cpp  StillColor.h
test/: AudioDeviceTest.cpp  AudioInputStreamTest.cpp  AudioInterfaceTest.cpp  CMakeLists.txt  EffectsControllerTest.cpp  EffectsFactoryTest.cpp  EffectsRendererTest.cpp  FIFOQueueTest.cpp  FilterTest.cpp  LEDStripTest.cpp  MelFilterBankTest.cpp  New Text Document.cpp  SamplesCollectorTest.cpp  SpectrumAnalyzerTest.cpp  SpectrumGeneratorTest.cpp  StereoAnalysisBufferTest.cpp  StereoSamplesBufferTest.cpp  StereoSpectrumBufferTest.cpp  TestsMain.cpp  TickGeneratorTest.cpp
